# tender-radar-showcase

./: .gitignore  README.md  backfill_deadlines.py  build_leads.py  digest.py  digest_client.py  eval.py  fetch.py  fetch_awards.py  fetch_procontract.py  profile.py  pyproject.toml  retender.py  runner.py  summary.py  tender.py  test_radar.py
.github/workflows/: pipeline-check.yml  tender-radar-daily.yml  tender-radar-weekly-sweep.yml
data/: golden-tenders.jsonl  tenders-fixture-multi.jsonl  tenders-fixture.jsonl
profiles/: cleaning.yaml  security.yaml
